[gd_scene load_steps=18 format=3 uid="uid://bwv6068ka2w5i"]

[ext_resource type="Script" path="res://Assets/Driver/Scripts/RC_RaceCar.gd" id="1_frc0g"]
[ext_resource type="Script" path="res://Assets/Driver/Scripts/RC_RaceCarInput.gd" id="2_cyojy"]
[ext_resource type="Script" path="res://Assets/Driver/Scripts/RC_RaceCarAI.gd" id="3_5ngv8"]
[ext_resource type="Texture2D" uid="uid://dqvc1c2hyp1ax" path="res://Assets/Driver/Sprites/rc_racecar.png" id="4_ud4jr"]
[ext_resource type="Texture2D" uid="uid://bkt4b1n37882w" path="res://Assets/Driver/Sprites/rc_racecar_color.png" id="5_053h6"]
[ext_resource type="PackedScene" uid="uid://bbjwl7hgfilvm" path="res://Assets/Driver/Scenes/rc_smoke_particle.tscn" id="6_8jnqu"]
[ext_resource type="PackedScene" uid="uid://cc7ekrcl0c6wl" path="res://Assets/Driver/Scenes/rc_boost_particle.tscn" id="7_m5ece"]
[ext_resource type="Texture2D" uid="uid://bp267e6xkfs4i" path="res://Assets/Driver/Sprites/rc_crown.png" id="8_glg4d"]
[ext_resource type="FontFile" uid="uid://3psmfg007muv" path="res://Assets/Fonts/Born2bSportyFS.otf" id="9_5d5a6"]

[sub_resource type="Curve" id="Curve_lag68"]
min_value = -1.0
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.045977, 0.996233), 0.0, 0.0, 0, 0, Vector2(0.296161, -0.306533), 0.0, 0.0, 0, 0, Vector2(0.498851, 0.738845), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 5

[sub_resource type="Curve" id="Curve_af38i"]
min_value = -1.0
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.046, -0.5), 0.0, 0.0, 0, 0, Vector2(0.296, 0.8), 0.0, 0.0, 0, 0, Vector2(0.499, -0.2), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 5

[sub_resource type="CircleShape2D" id="CircleShape2D_2jld7"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_qeh5b"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_itbjj"]
radius = 4.0

[sub_resource type="Animation" id="Animation_an36h"]
resource_name = "DisplayLapTime"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LapTime:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LapTime:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Color(1, 1, 0, 1), Color(1, 1, 1, 0.360784), Color(1, 1, 0, 1), Color(1, 1, 1, 0.360784), Color(1, 1, 0, 1), Color(1, 1, 1, 0.360784), Color(1, 1, 0, 1), Color(1, 1, 1, 0.360784), Color(1, 1, 0, 1), Color(1, 1, 1, 0.360784), Color(1, 1, 0, 1), Color(1, 1, 1, 0.360784), Color(1, 1, 0, 1), Color(1, 1, 1, 0.360784), Color(1, 1, 0, 1), Color(1, 1, 1, 0.360784), Color(1, 1, 0, 1), Color(1, 1, 1, 0.360784), Color(1, 1, 0, 1), Color(1, 1, 1, 0.360784)]
}

[sub_resource type="Animation" id="Animation_nt05f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LapTime:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LapTime:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dpulj"]
_data = {
"DisplayLapTime": SubResource("Animation_an36h"),
"RESET": SubResource("Animation_nt05f")
}

[node name="Car" type="CharacterBody2D"]
disable_mode = 1
collision_layer = 2
motion_mode = 1
script = ExtResource("1_frc0g")
hitPulseCurveX = SubResource("Curve_lag68")
hitPulseCurveY = SubResource("Curve_af38i")

[node name="PlayerInput" type="Node" parent="."]
script = ExtResource("2_cyojy")

[node name="CPUInput" type="Node" parent="."]
script = ExtResource("3_5ngv8")

[node name="Rotator" type="Node2D" parent="."]
rotation = 4.71239

[node name="Sprite" type="Sprite2D" parent="Rotator"]
texture = ExtResource("4_ud4jr")

[node name="Color" type="Sprite2D" parent="Rotator/Sprite"]
texture = ExtResource("5_053h6")

[node name="LeftTiremarkPos" type="Marker2D" parent="Rotator"]
position = Vector2(-5, -5)
gizmo_extents = 1.5

[node name="RightTiremarkPos" type="Marker2D" parent="Rotator"]
position = Vector2(-5, 5)
gizmo_extents = 1.5

[node name="WallCheck" type="ShapeCast2D" parent="Rotator"]
visible = false
position = Vector2(2, 0)
shape = SubResource("CircleShape2D_2jld7")
target_position = Vector2(0, 0)
max_results = 1

[node name="SmokeParticleEmitter" parent="Rotator" instance=ExtResource("6_8jnqu")]
rotation = 1.5708

[node name="BoostParticleEmitter" parent="Rotator" instance=ExtResource("7_m5ece")]
rotation = 1.5708

[node name="Crown" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -15)
texture = ExtResource("8_glg4d")

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_2jld7")

[node name="BoostCheck" type="ShapeCast2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_qeh5b")
target_position = Vector2(0, 0)
max_results = 1
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false

[node name="GrassCheck" type="ShapeCast2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_itbjj")
target_position = Vector2(0, 0)
max_results = 1
collision_mask = 8
collide_with_areas = true
collide_with_bodies = false

[node name="LapTime" type="Label" parent="."]
visible = false
z_index = 2
z_as_relative = false
custom_minimum_size = Vector2(96, 36)
offset_left = -48.0
offset_top = -48.0
offset_right = 48.0
offset_bottom = -12.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("9_5d5a6")
theme_override_font_sizes/font_size = 32
text = "999:99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LapTimeAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dpulj")
}
